--- a/app/css/main-mobil.css
+++ b/app/css/main-mobil.css
@@ -3342,7 +3342,10 @@ a {
   font-size: 12px;
   color: white;
   font-weight: bold;
-  padding: 0.4rem;
+  padding: 0.4rem 0.6rem;
+}
+.btn-azul-small:hover {
+  color: white;
 }
 
 .form-group {
@@ -3738,6 +3741,11 @@ input[type=checkbox].bigcheck:checked + span.bigcheck-target:after {
 
 .box-notification {
   margin-right: 31px;
+  /*  position: relative; */
+  cursor: pointer;
+}
+
+.icono-notifica {
   position: relative;
 }
 
@@ -3761,6 +3769,10 @@ input[type=checkbox].bigcheck:checked + span.bigcheck-target:after {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+}
+
+.relative {
+  position: relative;
 }
 
 .content-page {
@@ -4546,7 +4558,7 @@ body {
   height: 780px;
 }
 
-.box-estado-clima {
+.box-estado-operacional {
   display: none;
   width: 98%;
   position: absolute;
@@ -4562,10 +4574,10 @@ body {
           box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   border-radius: 8px;
 }
-.box-estado-clima.active {
+.box-estado-operacional.active {
   display: block;
 }
-.box-estado-clima .title-estado {
+.box-estado-operacional .title-estado {
   color: #003287;
   font-weight: bold;
   font-size: 14px;
@@ -4581,7 +4593,7 @@ body {
   display: flex;
 }
 .row-estado:hover {
-  background: #E7F0FF;
+  background: #D2FFE9;
   border-radius: 5px;
 }
 .row-estado i {
@@ -4618,6 +4630,11 @@ body {
   font-size: 14px;
   font-weight: bold;
 }
+.estado-porcentaje span {
+  font-size: 14px;
+  color: #5F6268;
+  font-weight: bold;
+}
 
 .row-botones {
   -webkit-box-align: center;
@@ -4631,6 +4648,83 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+}
+
+.box-lista-notifica {
+  display: none;
+  width: 98%;
+  position: absolute;
+  z-index: 12;
+  left: 1%;
+  top: 80px;
+  padding: 10px 0 0 0;
+  background: #FFFFFF;
+  border: 0.5px solid #BDBDBD;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+          box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 8px;
+}
+.box-lista-notifica.active {
+  display: block;
+}
+.box-lista-notifica .title-estado {
+  color: #003287;
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 30px;
+  margin-bottom: 15px;
+  padding: 0 23px;
+}
+
+.row-notifica {
+  padding: 8px 36px 8px 23px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  border-bottom: 1px solid #BDBDBD;
+}
+.row-notifica:hover {
+  background: #D2FFE9;
+  border-radius: 5px;
+}
+.row-notifica i {
+  margin-right: 19px;
+}
+.row-notifica .texto-notifica .subtitle-notifica {
+  color: #5F6268;
+  font-size: 14px;
+  line-height: 23px;
+  margin-bottom: 4px;
+}
+.row-notifica .texto-notifica .subtitle-notifica span {
+  font-weight: bold;
+}
+.row-notifica .texto-notifica p {
+  color: #5F6268;
+  font-size: 12px;
+  line-height: 16px;
+  margin-bottom: 13px;
+}
+
+.circle-notifica {
+  width: 45px;
+  height: 45px;
+  background: #2274FF;
+  border-radius: 100%;
+  display: block;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  min-width: 45px;
+  margin-right: 10px;
 }
 
 .wrapper {
