--- a/app/scss/pages/_home.scss
+++ b/app/scss/pages/_home.scss
@@ -237,12 +237,15 @@ body {
     align-items: center;
     justify-content: space-between;
     padding: 15px 25px;
-    border-top: 1px solid #BDBDBD;
+    // order-top: 1px solid #BDBDBD;
     display: flex;
 }
 
 
 .box-lista-notifica {
+    /* background-image: url(../images/page-notificaciones.jpg);
+    background-repeat: no-repeat;
+    background-position: top center; */
     display: none;
     width: 98%;
     position: absolute;
@@ -250,34 +253,33 @@ body {
     z-index: 12;
     left: 1%;
     top: 80px;
-    padding: 10px 0 0  0;
-    background: #FFFFFF;
+    padding: 17px 0 0  0;
+    background-color: #FFFFFF;
     border: 0.5px solid #BDBDBD;
-    box-sizing: border-box;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 8px;
+
     &.active {
         display: block;
     }
-    .title-estado {
+    .title-notifica {
         color: $blue-dark;
         font-weight: bold;
         font-size: 14px;
         line-height: 30px;
-        margin-bottom: 15px;
+        margin-bottom: 4px;
         padding: 0 23px;
+        display: flex;
+        justify-content: space-between;
     }
 }
 
 .row-notifica {
-    // padding: 8px 23px 8px 23px;
     padding: 8px 36px 8px 23px;
     display: flex;
     border-bottom: 1px solid #BDBDBD;
-    &:hover {
-        // cursor: pointer;
-        background: #D2FFE9;
-        border-radius: 5px;
+    &.reader {
+        background-color: #F2F4F4;
     }
     i {
         margin-right: 19px;
@@ -286,7 +288,7 @@ body {
         .subtitle-notifica {
             color: $black-light;
             font-size: 14px;
-            line-height: 23px;
+            line-height: 17px;
             margin-bottom: 4px;
             span {
                 font-weight: bold;
@@ -296,10 +298,31 @@ body {
             color: $black-light;
             font-size: 12px;
             line-height: 16px;
-            margin-bottom: 13px;
+            margin-bottom: 0;
         }
     }
 
+}
+
+.punto {
+    width: 6px;
+    height: 6px;
+    border: 1px solid $blue;
+    background-color: $blue;
+    border-radius: 20px;
+    position: unset;
+    display: block;
+    right: -20px;
+    display: flex;
+    border-radius: 100%;
+    min-width: 6px;
+    position: relative;
+    top: 4px;
+
+    .reader & {
+        border:1px solid #979797;
+        background-color: transparent;
+    }
 }
 
 .circle-notifica {
@@ -314,3 +337,16 @@ body {
     min-width: 45px;
     margin-right: 10px;
 }
+
+.circle-check {
+    width: 45px;
+    height: 45px;
+    border-radius: 100%;
+    display: block;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    min-width: 45px;
+    margin-right: 10px;
+}
+
