--- a/app/css/main-mobil.css
+++ b/app/css/main-mobil.css
@@ -3348,6 +3348,47 @@ a {
   color: white;
 }
 
+.btn-convenio {
+  background-color: #8FB9FF;
+  border-radius: 8px;
+  font-size: 14px;
+  color: #2274FF;
+  font-weight: bold;
+  padding: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  border-radius: 8px;
+  height: 60px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding-left: 20px;
+}
+.btn-convenio:hover {
+  text-decoration: none;
+}
+
+.group-append {
+  background-color: #2274FF;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  border-top-right-radius: 8px;
+  border-bottom-right-radius: 8px;
+  width: 90px;
+  height: 60px;
+}
+
 .form-group {
   margin-bottom: 2rem;
 }
@@ -4423,6 +4464,8 @@ body {
   border: 1px solid #DCE2EC;
   border-radius: 5px;
   padding: 16px 13px;
+  -webkit-box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.08);
+          box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.08);
 }
 
 .item-element {
@@ -4507,6 +4550,7 @@ body {
   display: flex;
 }
 .text-boleta a {
+  color: #003287;
   font-size: 14px;
   font-weight: bold;
   display: -webkit-box;
@@ -4591,6 +4635,7 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  cursor: pointer;
 }
 .row-estado:hover {
   background: #D2FFE9;
@@ -4644,9 +4689,13 @@ body {
       -ms-flex-pack: justify;
           justify-content: space-between;
   padding: 15px 25px;
+  border-top: 1px solid #BDBDBD;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+}
+.lista-notifica .row-botones {
+  border: none;
 }
 
 .box-lista-notifica {
@@ -4770,6 +4819,20 @@ body {
           justify-content: center;
   min-width: 45px;
   margin-right: 10px;
+}
+
+.group-append {
+  width: 90px;
+  background-color: #2274FF;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .wrapper {
