--- a/app/scss/pages/_home.scss
+++ b/app/scss/pages/_home.scss
@@ -1,7 +1,7 @@
 body {
     background-position: top center;
     background-repeat: no-repeat;
-   /*  &.home {
+    /* &.home {
          background-image: url(../images/home-app.jpg);
          background-position: 0 -12px;
      } */
@@ -383,9 +383,9 @@ body {
         border-bottom: 4px solid;
     }
 
-    .nav-tabs .nav-link:focus, .nav-tabs .nav-link:hover {
+   /*  .nav-tabs .nav-link:hover {
         border-color: transparent;
-    }
+    } */
 
 }
 
@@ -403,13 +403,65 @@ body {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    margin-top: 20px;
+    margin-top: 26px;
 }
 
 .section-mapa {
-    margin-top: 30px;
+    margin-top: 36px;
 }
 .detalle-compra {
     padding: 0 20px;
+    margin-top: 15px;
 }
 
+
+.section-menu {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    box-shadow: 0px 3px 12px rgba(0, 0, 0, 0.25);
+   /*  padding: 10px; */
+    padding: 4px 0 0 0;
+    margin-top: 45px;
+    height: 75px;
+}
+
+.item-menu {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 20%;
+    span {
+        font-size: 10px;
+        line-height: 30px;
+        position: relative;
+        top: -7px;
+    }
+}
+.item-general {
+    /* border: 1px solid red; */
+    width: 70px;
+    height: 70px;
+    position: relative;
+    justify-content: center;
+    i {
+        position: absolute;
+        top: -40px;
+        width: 70px;
+        height: 70px;
+        border: 1px solid;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        border-radius: 100%;
+        box-shadow: 0px -1px 7px rgb(0 0 0 / 8%);
+        background: #FFFFFF;
+        border: 1px solid #E7F0FF;
+    }
+    span {
+        color:$blue;
+        top: 5px;
+        position: relative;
+    }
+}
