--- a/app/scss/main-mobil.scss
+++ b/app/scss/main-mobil.scss
@@ -23,10 +23,10 @@
 @import 'pages/registro-mobile';
 @import 'pages/registro-mobile-natural';
 @import 'pages/home';
+@import 'pages/educar-boleta';
 
 .wrapper {
     max-width: 375px;
     margin: 0 auto;
     border:1px solid lightgray;
 }
-
