--- a/app/scss/pages/_home.scss
+++ b/app/scss/pages/_home.scss
@@ -413,7 +413,7 @@
     box-shadow: 0px 3px 12px rgba(0, 0, 0, 0.25);
    /*  padding: 10px; */
     padding: 4px 0 0 0;
-    margin-top: 45px;
+    // margin-top: 45px;
     height: 75px;
 }
 
