--- a/app/scss/pages/_home.scss
+++ b/app/scss/pages/_home.scss
@@ -354,7 +354,7 @@
     justify-content: center;
 }
 
-.consumo-grafica {
+.content-nav-tabs {
     .nav-link {
         color:$black-light;
         font-size: 16px;
