--- a/app/scss/pages/_educar-boleta.scss
+++ b/app/scss/pages/_educar-boleta.scss
@@ -180,3 +180,36 @@ body {
     font-weight: bold;
     text-decoration: underline;
 }
+
+.box-pregunta {
+    border-top: 1px solid #E7F0FF;
+    padding: 10px 0;
+    &:last-child {
+        border-bottom: 1px solid #E7F0FF;
+    }
+}
+
+
+.btn-pregunta {
+    background-color: white;
+    border: none;
+    font-size: 14px;
+    font-weight: bold;
+    color: #2274FF;
+    text-align: left;
+    &:focus {
+        outline: none;
+    }
+}
+
+.item-respuesta {
+    color:#53565A;
+    font-size: 14px;
+}
+
+.link-center {
+    font-weight: bold;
+    text-align: center;
+    text-decoration: underline;
+    display: block;
+}
