se crea pagina ver boleta 1

--- a/app/css/main-mobil.css
+++ b/app/css/main-mobil.css
@@ -3095,6 +3095,12 @@ a {
   text-decoration: underline;
 }
 
+.wrapper {
+  max-width: 375px;
+  margin: 0 auto;
+  border: 1px solid lightgray;
+}
+
 /* Mixins
   =============== */
 .contenedor {
@@ -3114,7 +3120,8 @@ a {
 .second-title,
 .third-title,
 .fourth-title,
-.fifth-title {
+.fifth-title,
+.big-title {
   color: #003287;
   font-weight: bold;
 }
@@ -3142,6 +3149,11 @@ a {
   color: #2274FF;
   font-size: 16px;
   font-weight: bold;
+}
+
+.big-title {
+  font-size: 18px;
+  text-align: center;
 }
 
 .box-switch {
@@ -3410,6 +3422,32 @@ a {
 }
 .btn-pregunta:not(.collapsed) + i:before {
   content: "";
+}
+
+.btn-blanco-img {
+  border: 1px solid #2274FF;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  border-radius: 8px;
+  font-size: 16px;
+  color: #2274FF;
+  font-weight: bold;
+  padding: 1rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+.btn-blanco-img:hover {
+  color: #2274FF;
+}
+.btn-blanco-img i {
+  margin-right: 10px;
 }
 
 .form-group {
@@ -4850,9 +4888,9 @@ input[type=checkbox].bigcheck:checked + span.bigcheck-target:after {
 }
 
 .content-nav-tabs {
-  /*  .nav-tabs .nav-link:hover {
-       border-color: transparent;
-   } */
+  /* .nav-tabs .nav-link:hover {
+      border:none;
+  } */
 }
 .content-nav-tabs .nav-link {
   color: #5F6268;
@@ -5110,22 +5148,6 @@ body {
   padding: 28px 39px;
 }
 
-.lista-cuenta .title-cuenta {
-  color: #5F6268;
-  font-size: 16px;
-  color: #5F6268;
-  font-weight: bold;
-}
-.lista-cuenta .resultado-cuenta {
-  color: #5F6268;
-  font-size: 16px;
-  color: #5F6268;
-}
-.lista-cuenta .estado-cuenta {
-  color: #FFA300;
-  font-size: 16px;
-}
-
 .lista-cuenta {
   list-style: none;
 }
@@ -5143,6 +5165,10 @@ body {
   color: #5F6268;
   font-size: 16px;
   color: #5F6268;
+}
+.lista-cuenta .estado-cuenta {
+  color: #FFA300;
+  font-size: 16px;
 }
 
 .content-nav-tabs {
@@ -5196,9 +5222,37 @@ body {
   font-size: 13px;
 }
 
-.wrapper {
-  max-width: 375px;
-  margin: 0 auto;
-  border: 1px solid lightgray;
+body {
+  background-position: top center;
+  background-repeat: no-repeat;
+}
+body.page-boleta123 {
+  background-image: url(../images/m-boleta-1.jpg);
+  background-position: 0 0;
+  /*  .content-page-boleta {
+      background-color: transparent; 
+  } */
+}
+
+.badge-pendiente {
+  color: #FFA300;
+  font-size: 16px;
+  background-color: #FFD58B;
+  padding: 8px 25px;
+  height: 31px;
+  border-radius: 5px;
+  font-weight: bold;
+  display: inline-block;
+  line-height: 1;
+}
+
+.btn-carga {
+  background-color: #F3F4F5;
+  border-radius: 8px;
+  font-size: 16px;
+  color: #2274FF;
+  font-weight: bold;
+  padding: 1rem;
+  color: #BFC1C5;
 }
 /*# sourceMappingURL=main-mobil.css.map */
