--- a/app/scss/base/_reset.scss
+++ b/app/scss/base/_reset.scss
@@ -51,3 +51,9 @@ a {
 .link-registro {
   text-decoration: underline;
 }
+
+.wrapper {
+  max-width: 375px;
+  margin: 0 auto;
+  border:1px solid lightgray;
+}
