--- a/app/scss/components/_buttons.scss
+++ b/app/scss/components/_buttons.scss
@@ -167,3 +167,23 @@
         }
     }
 }
+
+
+.btn-blanco-img {
+    border: 1px solid #2274FF;
+    box-sizing: border-box;
+    border-radius: 8px;
+    font-size: 16px;
+    color: $blue;
+    font-weight: bold;
+    padding: 1rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    &:hover {
+        color: $blue;
+    }
+    i {
+        margin-right: 10px;
+    }
+}
