--- a/app/scss/main-mobil.scss
+++ b/app/scss/main-mobil.scss
@@ -24,9 +24,4 @@
 @import 'pages/registro-mobile-natural';
 @import 'pages/home';
 @import 'pages/educar-boleta';
-
-.wrapper {
-    max-width: 375px;
-    margin: 0 auto;
-    border:1px solid lightgray;
-}
+@import 'pages/ver-boleta';
