--- a/app/scss/pages/_home.scss
+++ b/app/scss/pages/_home.scss
@@ -374,10 +374,9 @@
         border-bottom: 4px solid;
     }
 
-   /*  .nav-tabs .nav-link:hover {
-        border-color: transparent;
+    /* .nav-tabs .nav-link:hover {
+        border:none;
     } */
-
 }
 
 .box-compara {
