--- a/app/scss/base/_text.scss
+++ b/app/scss/base/_text.scss
@@ -2,7 +2,8 @@
 .second-title,
 .third-title,
 .fourth-title,
-.fifth-title {
+.fifth-title,
+.big-title {
 	color: $blue-dark;
     font-weight: bold;
 }
@@ -29,4 +30,9 @@
     color: #2274FF;
     font-size: 16px;
     font-weight: bold;
+}
+
+.big-title {
+    font-size: 18px;
+    text-align: center;
 }
