--- a/app/scss/pages/_ver-boleta.scss
+++ b/app/scss/pages/_ver-boleta.scss
@@ -2,13 +2,13 @@
 body {
     background-position: top center;
     background-repeat: no-repeat;
-    &.page-boleta123 {
+    /* &.page-boleta {
          background-image: url(../images/m-boleta-1.jpg);
          background-position: 0 0;
-        /*  .content-page-boleta {
+         .content-page {
             background-color: transparent; 
-        } */
-    }
+        }
+    } */
 }
 
 .badge-pendiente {
