--- a/app/scss/components/_buttons.scss
+++ b/app/scss/components/_buttons.scss
@@ -151,7 +151,7 @@
     background-color: white;
     border: none;
     font-size: 14px;
-    font-weight: bold;
+    /* font-weight: bold; */
     color: #2274FF;
     text-align: left;
     display: block;
@@ -160,6 +160,7 @@
         outline: none;
     }
     &:not(.collapsed) {
+        font-weight: bold;
         + i{
             &:before {
                 content: "\f077";
